--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,19 @@
                 </includes>
             </configuration>
         </plugin>
+
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version>
+            <configuration>
+                <suiteXmlFiles>
+                    <suiteXmlFile>testng.xml</suiteXmlFile>
+                </suiteXmlFiles>
+                <reportFormat>xml</reportFormat>
+                <useFile>true</useFile>
+            </configuration>
+        </plugin>
     </plugins>
 </build>
 </project>
